@@ -1,24 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-DIST wolfspdemo-linux-1.1b.x86.run 117813349 RMD160 9c54d4b9d403b73c67db49feff7c77cd22e48417 SHA1 15b6defdbb2b9520d286fd700bb7ecc7c7935424 SHA256 dbff5ea928802b1bddfd4c171bf08ed4294b2da0273e1cf0802fdcedc40c23c3
-EBUILD rtcwsp-demo-1.1b.ebuild 1319 RMD160 477e03162e06cb9e571f4b1fafaa4248be6fb811 SHA1 e088e1186eb286cba59148f376aa472cd2769d00 SHA256 47a7372754320993852beccc93abee52fab6b93422decac32b8dcfb9805930d7
-MISC ChangeLog 1625 RMD160 c9ba41d4a1ae20de8997aace9d5c5321fe6fad73 SHA1 1f2eb502ed3c85695f098c3c6e6a487f478e624c SHA256 c7aea79a3bb3eb11c39b8ea1c31c8816f1a8bf3ac5e1f46070de20197a80381d
-MISC metadata.xml 301 RMD160 c7d3035b4381672ca790fae33a588c5a1c138660 SHA1 0ecf83858e9661124d1bd5e3150707e7e6558ddb SHA256 4e386214c1ec4ec11ee9a32fff3ec6f9eb26910f575c60267865bf909a3710ee
+DIST wolfspdemo-linux-1.1b.x86.run 117813349 SHA256 dbff5ea928802b1bddfd4c171bf08ed4294b2da0273e1cf0802fdcedc40c23c3 SHA512 3fc540c8721780747e14fe66d634c1347ab0cbc09eb795edfad0802663caa63393ac5a224792fd3e423e725b66cc2738877324c86a08698e0d7b6f2f804b7392 WHIRLPOOL e0c47261056d9e78a42183b02b4910f3a12870095bdb83510b535c3dd82414a4c6e16126047ba967e4adfaf1887fbf2b81a5d9473adf547e2d800972f6af20b8
+EBUILD rtcwsp-demo-1.1b-r1.ebuild 1607 SHA256 72a46682eb18f6070d5bf95e41b7d053d07f0bc1b27c0b53750a3eed7b09d9f7 SHA512 5c7c0fb655e6029a9a7a52f3cdea0eda676bc893c1f013299b2ab4cab2b28337d79ea3e54c43c6ef590e0e4d4e2ad1426604b46a23b712edc30c41727abd7ddb WHIRLPOOL a0e685ddc8ceedab3be99bc599a3bd0a16b244d14f70116c66ee783eaa02306bb22b44dbfc044939de785405b60c0dc267f9c72eb1871c553277a32094912fc1
+EBUILD rtcwsp-demo-1.1b.ebuild 1319 SHA256 47a7372754320993852beccc93abee52fab6b93422decac32b8dcfb9805930d7 SHA512 0b545fc073162aeed61d8631d5993c64dfdcca31b46b536a5b270ec764ea3b17d83d0b0a4828b356e909b62cb6067f9c6f8ee6f818a9deec6abcf8bad66c094b WHIRLPOOL c6c83f59883b33fd089347c899747a380b9cd78098a82b8c4029390bf189f3863ba900b3d008abb55846012beda5dc1d84e53c54404c2d62e42be23b93c93aec
+MISC ChangeLog 1932 SHA256 e0c6c98fca94d38860762e02254084618f821dff27a7497493e4b8754d18aaca SHA512 02b521a78288d7d7bd3f45f09b7fda3ed9354a20fdf31b38ef1e9cdc8942736a62249f5792d286cca9be136cac4dc6fa358302e0377542b322e76dd8739abd35 WHIRLPOOL ffcf4d1ebcdf94d9fe3f4253ce54b25648058512406fe7486b3b5d1b3ee72ae085744a89e4dea485f4cb0311b455f6b47b9534b094c1ed8d4a992756c7121494
+MISC metadata.xml 301 SHA256 4e386214c1ec4ec11ee9a32fff3ec6f9eb26910f575c60267865bf909a3710ee SHA512 c74b3aa96e97dbb345fd0d980b6c10f6814321f9d0509f7351a9d63d2548428baa540fe23525d105a6ed5a067c49f11b16279028fe81eb434d106d1d49a06f8a WHIRLPOOL 67786e2f30b1b8880948226ffec6e81296c658fbe3bfe17059ce1b17258d16c1fba296905925b765c19ce136197913f6c50a5857293e7216e2893dc4c1a6a233
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBAgAGBQJPMugjAAoJELEHsLL7fEFWsvMQAK5U+CDyqFHveSwWtVt79wi4
-mzFC7J1GvIxD3cenhSZb38SozjIrH5baLknkR9HiuHiGEj74hmOrHL6Q/gvMkAR+
-a4nyLBm5bI7D4seNQP/fqg53O5D4VFUwkvHHKKI7yRDDrXKKAHBUgRME7mVHRpcE
-yMI9OgR/+4dPzCs0y9CKvDCqIitpA44GXswByFGtA+j8Y2iJ4MenfCerxyBYU57L
-tqYGoZL5oYWqxlGU1x+LFzcP+3IH45UrbgDS7gZ5cyoztRkURInbToaWw7CM4kUe
-ksfPvDHaq53erv7aQ2mlAO0C2wLxaVyAjNmv6aULlwgSspAMOPoxolF0+PHCaPyS
-MxfZpnPyEh6xMogPsma0DkhgXtB03FSceai5tTtcpplun9vdXvD1C92HsifFmW8l
-vO+MmxMBHszwV2HivJex3MJMR+syYnIzoO8L8sg0Ph4dGWgwOMF+lyH4cb7ZLV4Z
-Zyq4s7gBrXEV/G/BTNMOtwmXPIRNMZg5l4Q5R53VNARR/Y35Yls6Rvwbccq0r/oc
-lJcpiU68NHaMMOc6g2wh3igiXDIEG9kVPVe4v93oDHm6jI2rOL9ZUdaZRnH9cCMY
-QI9PKhsOSjENgNg6CAFL69YmNx/4lBNgcdjZAiKNo08B7qM96sq1Ho8M8VderitF
-a7QypJD38dv2jih7fJaN
-=dTMn
+iF4EAREIAAYFAlPG1ksACgkQ2ugaI38ACPBUMQEAu38w6Mz4M/fjGuUHcKrmyJal
+uKOfftN6bLmwIMCFKwYA/3N+uXdPudmx7JxiNVqufRTQdfIimkRnLqoCkBPlxho3
+=1Kl7
 -----END PGP SIGNATURE-----
