@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install postinst preinst prepare setup unpack
+DESCRIPTION=Return to Castle Wolfenstein - Single-player demo
+EAPI=5
+HOMEPAGE=http://games.activision.com/games/wolfenstein/
+KEYWORDS=-* ~amd64 ~x86
+LICENSE=RTCW
+RDEPEND=sys-libs/glibc amd64? ( sys-libs/glibc[multilib] ) || ( ( virtual/opengl[abi_x86_32(-)] x11-libs/libX11[abi_x86_32(-)] x11-libs/libXext[abi_x86_32(-)] ) ( app-emulation/emul-linux-x86-xlibs[-abi_x86_32(-)] app-emulation/emul-linux-x86-opengl[-abi_x86_32(-)] ) ) games-misc/games-envd
+RESTRICT=strip mirror
+SLOT=0
+SRC_URI=mirror://idsoftware/wolf/linux/old/wolfspdemo-linux-1.1b.x86.run mirror://3dgamers/returnwolfenstein/wolfspdemo-linux-1.1b.x86.run
+_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	06133990e861be0fe60c2b428fd025d9	games	e221fed675714bd5545b7488aed9f822	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	unpacker	f300a7ca9131b1024a79762e8edd3c52	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=f10e93eac8b4f73c0ef4d8dd53a71faa
